--- a/index.html
+++ b/index.html
@@ -1,52 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Skilled e-learning landing page</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap" rel="stylesheet">
+    <title>Frontend Mentor | Skilled e-learning landing page</title>
+  </head>
+  <body>
+    <main class="everything">
+      <header class="header">
+        <picture
+          ><img src="assets/logo-dark.svg" alt="logo of skilled"
+        /></picture>
+        <button>Get Started</button>
+      </header>
 
-  Get Started
+      <section class="top-banner">
+        <h1>Maximize skill, minimize budget</h1>
+        <p>
+          Our modern courses across a range of in-demand skills will give you
+          the knowledge you need to live the life you want.
+        </p>
+        <button>Get Started</button>
+      </section>
 
-  Maximize skill, minimize budget
+      <picture>
+        <img class="hero" src="assets/image-hero-mobile.png" alt="hero" />
+      </picture>
 
-  Our modern courses across a range of in-demand skills will give you the 
-  knowledge you need to live the life you want.
+      <section class="second-banner">
+        <h2>Check out our most popular courses!</h2>
+      </section>
 
-  Get Started
+      <section class="animation">
+        <picture><img src="assets/icon-animation.svg" alt="animation"></picture>
+       <h3>Animation</h3>
+      <p> Learn the latest animation techniques to create stunning
+        motion design and captivate your audience.</p>
+        <a href="#">Get Started</a>
+      </section>
 
-  Check out our most popular courses!
+      <section class="design">
+        <picture><img src="assets/icon-design.svg" alt="design"></picture>
+        <h3>Design</h3>
+        <p> Create beautiful, usable interfaces to help shape the future of
+        how the web looks.</p>
+        <a href="#">Get Started</a>
+      </section>
 
-  Animation
-  Learn the latest animation techniques to create stunning motion 
-  design and captivate your audience.
-  Get Started
+      <section class="photography">
+        <picture><img src="assets/icon-photography.svg" alt="photography"></picture>
+        <h3>Photography</h3> 
+        <p> Explore critical fundamentals like lighting, composition,
+        and focus to capture exceptional photos.</p>
+        <a href="#">Get Started</a>
+      </section>
 
-  Design
-  Create beautiful, usable interfaces to help shape the future of 
-  how the web looks.
-  Get Started
+      <section class="crypto">
+        <picture><img src="assets/icon-crypto.svg" alt="crypto"></picture>
+        <h3>Crypto</h3>
+        <p> All you need to know to get started investing in crypto. Go from
+        beginner to advanced with this 54 hour course.</p>
+        <a href="#">Get Started</a>
+      </section>
 
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus 
-  to capture exceptional photos.
-  Get Started
+      <section class="business">
+        <picture><img src="assets/icon-business.svg" alt="business"></picture>
+        <h3>Business</h3>
+        <p> A step-by-step playbook to help you start, scale, and sustain
+        your business without outside investment.</p>
+        <a href="#">Get Started</a>
+      </section>
 
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner 
-  to advanced with this 54 hour course.
-  Get Started
-
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business 
-  without outside investment.
-  Get Started
-
-  Get Started
-
-</body>
+      <footer class="footer">
+        <picture>
+          <img src="assets/logo-light.svg" alt="skilled logo" />
+        </picture>
+        <button>Get Started</button>
+      </footer>
+    </main>
+  </body>
 </html>
