--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       href="./assets/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap"
+      rel="stylesheet"
+    />
     <title>Frontend Mentor | Skilled e-learning landing page</title>
   </head>
   <body>
@@ -41,42 +44,56 @@
       </section>
 
       <section class="animation">
-        <picture><img src="assets/icon-animation.svg" alt="animation"></picture>
-       <h3>Animation</h3>
-      <p> Learn the latest animation techniques to create stunning
-        motion design and captivate your audience.</p>
+        <picture
+          ><img src="assets/icon-animation.svg" alt="animation"
+        /></picture>
+        <h3>Animation</h3>
+        <p class="para">
+          Learn the latest animation techniques to create stunning motion design
+          and captivate your audience.
+        </p>
         <a href="#">Get Started</a>
       </section>
 
       <section class="design">
-        <picture><img src="assets/icon-design.svg" alt="design"></picture>
+        <picture><img src="assets/icon-design.svg" alt="design" /></picture>
         <h3>Design</h3>
-        <p> Create beautiful, usable interfaces to help shape the future of
-        how the web looks.</p>
+        <p class="para">
+          Create beautiful, usable interfaces to help shape the future of how
+          the web looks.
+        </p>
         <a href="#">Get Started</a>
       </section>
 
       <section class="photography">
-        <picture><img src="assets/icon-photography.svg" alt="photography"></picture>
-        <h3>Photography</h3> 
-        <p> Explore critical fundamentals like lighting, composition,
-        and focus to capture exceptional photos.</p>
+        <picture
+          ><img src="assets/icon-photography.svg" alt="photography"
+        /></picture>
+        <h3>Photography</h3>
+        <p class="para">
+          Explore critical fundamentals like lighting, composition, and focus to
+          capture exceptional photos.
+        </p>
         <a href="#">Get Started</a>
       </section>
 
       <section class="crypto">
-        <picture><img src="assets/icon-crypto.svg" alt="crypto"></picture>
+        <picture><img src="assets/icon-crypto.svg" alt="crypto" /></picture>
         <h3>Crypto</h3>
-        <p> All you need to know to get started investing in crypto. Go from
-        beginner to advanced with this 54 hour course.</p>
+        <p class="para">
+          All you need to know to get started investing in crypto. Go from
+          beginner to advanced with this 54 hour course.
+        </p>
         <a href="#">Get Started</a>
       </section>
 
       <section class="business">
-        <picture><img src="assets/icon-business.svg" alt="business"></picture>
+        <picture><img src="assets/icon-business.svg" alt="business" /></picture>
         <h3>Business</h3>
-        <p> A step-by-step playbook to help you start, scale, and sustain
-        your business without outside investment.</p>
+        <p class="para">
+          A step-by-step playbook to help you start, scale, and sustain your
+          business without outside investment.
+        </p>
         <a href="#">Get Started</a>
       </section>
 
