completed tablet layout

--- a/index.html
+++ b/index.html
@@ -26,76 +26,94 @@
         <button>Get Started</button>
       </header>
 
-      <section class="top-banner">
-        <h1>Maximize skill, minimize budget</h1>
-        <p>
-          Our modern courses across a range of in-demand skills will give you
-          the knowledge you need to live the life you want.
-        </p>
-        <button>Get Started</button>
-      </section>
+      <div class="hero-banner">
+        <section class="top-banner">
+          <h1>Maximize skill, minimize budget</h1>
+          <p>
+            Our modern courses across a range of in-demand skills will give you
+            the knowledge you need to live the life you want.
+          </p>
+          <button>Get Started</button>
+        </section>
 
-      <picture>
-        <img class="hero" src="assets/image-hero-mobile.png" alt="hero" />
-      </picture>
+        <picture>
+          <source
+            media="(min-width: 1440px)"
+            srcset="assets/image-hero-desktop.webp"
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="assets/image-hero-tablet.webp"
+          />
+          <source
+            media="(max-width: 767px)"
+            srcset="assets/image-hero-mobile.webp"
+          />
+          <img class="hero" src="assets/image-hero-mobile.webp" alt="hero" />
+        </picture>
+      </div>
 
-      <section class="second-banner">
-        <h2>Check out our most popular courses!</h2>
-      </section>
+      <div class="content">
+        <section class="second-banner">
+          <h2>Check out our most popular courses!</h2>
+        </section>
 
-      <section class="animation">
-        <picture
-          ><img src="assets/icon-animation.svg" alt="animation"
-        /></picture>
-        <h3>Animation</h3>
-        <p class="para">
-          Learn the latest animation techniques to create stunning motion design
-          and captivate your audience.
-        </p>
-        <a href="#">Get Started</a>
-      </section>
+        <section class="animation">
+          <picture
+            ><img src="assets/icon-animation.svg" alt="animation"
+          /></picture>
+          <h3>Animation</h3>
+          <p class="para">
+            Learn the latest animation techniques to create stunning motion
+            design and captivate your audience.
+          </p>
+          <a href="#">Get Started</a>
+        </section>
 
-      <section class="design">
-        <picture><img src="assets/icon-design.svg" alt="design" /></picture>
-        <h3>Design</h3>
-        <p class="para">
-          Create beautiful, usable interfaces to help shape the future of how
-          the web looks.
-        </p>
-        <a href="#">Get Started</a>
-      </section>
+        <section class="design">
+          <picture><img src="assets/icon-design.svg" alt="design" /></picture>
+          <h3>Design</h3>
+          <p class="para">
+            Create beautiful, usable interfaces to help shape the future of how
+            the web looks.
+          </p>
+          <a href="#">Get Started</a>
+        </section>
 
-      <section class="photography">
-        <picture
-          ><img src="assets/icon-photography.svg" alt="photography"
-        /></picture>
-        <h3>Photography</h3>
-        <p class="para">
-          Explore critical fundamentals like lighting, composition, and focus to
-          capture exceptional photos.
-        </p>
-        <a href="#">Get Started</a>
-      </section>
+        <section class="photography">
+          <picture
+            ><img src="assets/icon-photography.svg" alt="photography"
+          /></picture>
+          <h3>Photography</h3>
+          <p class="para">
+            Explore critical fundamentals like lighting, composition, and focus
+            to capture exceptional photos.
+          </p>
+          <a href="#">Get Started</a>
+        </section>
 
-      <section class="crypto">
-        <picture><img src="assets/icon-crypto.svg" alt="crypto" /></picture>
-        <h3>Crypto</h3>
-        <p class="para">
-          All you need to know to get started investing in crypto. Go from
-          beginner to advanced with this 54 hour course.
-        </p>
-        <a href="#">Get Started</a>
-      </section>
+        <section class="crypto">
+          <picture><img src="assets/icon-crypto.svg" alt="crypto" /></picture>
+          <h3>Crypto</h3>
+          <p class="para">
+            All you need to know to get started investing in crypto. Go from
+            beginner to advanced with this 54 hour course.
+          </p>
+          <a href="#">Get Started</a>
+        </section>
 
-      <section class="business">
-        <picture><img src="assets/icon-business.svg" alt="business" /></picture>
-        <h3>Business</h3>
-        <p class="para">
-          A step-by-step playbook to help you start, scale, and sustain your
-          business without outside investment.
-        </p>
-        <a href="#">Get Started</a>
-      </section>
+        <section class="business">
+          <picture
+            ><img src="assets/icon-business.svg" alt="business"
+          /></picture>
+          <h3>Business</h3>
+          <p class="para">
+            A step-by-step playbook to help you start, scale, and sustain your
+            business without outside investment.
+          </p>
+          <a href="#">Get Started</a>
+        </section>
+      </div>
 
       <footer class="footer">
         <picture>
